# BusGuideApp

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  filter_item.xml  fragment_trips.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
backend/: Cargo.toml  README.md  build.rs  test_req_body.json
backend/db_data/base/16468/: 16482_fsm  16482_vm
backend/db_data/base/16646/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  16647  16652  16653  16655  16656  16660  16660_fsm  16660_vm  16661  16662  (+235 more)
backend/db_data/pg_stat/: pgstat.stat
backend/migrations/: 20240421220405_create_organizators.sql  20240423235859_organizators_add_viber_number.sql  20240425212023_setup_db.sql
backend/src/: constants.rs  lib.rs  main.rs  review.rs  trip.rs  user.rs  utils.rs
backend/src/unit_tests/: review_tests.rs  trip_tests.rs  user_test.rs
frontend/: OrganizatorOuterClass.java
frontend/app/: build.gradle.kts
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/res/layout/: activity_add_review.xml  activity_admin_creation.xml  activity_admin_panel.xml  activity_all_reservations.xml  activity_auth.xml  activity_booking_trip.xml  (+12 more)
gradle/wrapper/: gradle-wrapper.properties
schemas/: organizator.proto
(+59 files in other folders)
